add letter spacing use letterSpacing instead of spaces

--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="general_skills_tests">უნარების ტესტები</string>
     <string name="driving_license_tests">მარვის მოწმობის ტესტები</string>
     <string name="geography_tests">გეოგრაფიის ტესტები</string>
+    <string name="title_name">Testomania</string>
 </resources>
