--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Testomania</string>
-    <string name="general_skills_tests">უნარების ტესტები</string>
+    <string name="general_skills_tests">უნარების მათემატიკური ტესტები</string>
     <string name="driving_license_tests">მარვის მოწმობის ტესტები</string>
     <string name="geography_tests">გეოგრაფიის ტესტები</string>
     <string name="title_name">Testomania</string>
