brand new home screen (#42)
* brand new home screen

* fix typo

* change to card views

* center text inside cards

* fix navigation not working

* increase paddings

* fixed unresolved refs

--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Testomania</string>
-    <string name="general_skills_tests">უნარების ტესტები</string>
-    <string name="driving_license_tests">მარვის მოწმობის ტესტები</string>
-    <string name="geography_tests">გეოგრაფიის ტესტები</string>
+    <string name="general_skills_tests">უნარები (მათემატიკური)</string>
+    <string name="driving_license_tests">მართვის მოწმობა</string>
+    <string name="geography_tests">გეოგრაფია</string>
     <string name="title_name">Testomania</string>
 </resources>
