Changes according to code review

--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="creator_developers">Creator Developers:</string>
     <string name="navigation_finish">Finish</string>
     <string name="navigation_next">Next</string>
+    <string name="coming_soon">Coming soon...</string>
 </resources>
