Added skip text to primary button

--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -16,6 +16,6 @@
     <string name="app_github_url">https://github.com/Nodrex/Testomania</string>
     <string name="creator_developers">Creator Developers:</string>
     <string name="navigation_finish">Finish</string>
-    <string name="navigation_next">Next</string>
+    <string name="navigation_next">Next/Skip</string>
     <string name="coming_soon">Coming soon...</string>
 </resources>
