--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="install_browser">Pleas install at least browser to open %1$s</string>
     <string name="linkedin">LinkedIn</string>
     <string name="github">Github</string>
-    <string name="book">Books</string>
+    <string name="books">Books</string>
+    <string name="music">Music</string>
+    <string name="tv">TV</string>
 </resources>
