Added 2 more categories and some refactoring

--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="sports">Sports</string>
     <string name="vehicles">Vehicles</string>
     <string name="video_games">Video Games</string>
+    <string name="linux">Linux</string>
 </resources>
