--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="php">PHP</string>
     <string name="programing">Programing</string>
     <string name="sql">SQL</string>
+    <string name="anime_manga">Anime Manga</string>
 </resources>
