Added 2 more categories

--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -52,4 +52,6 @@
     <string name="programing">Programing</string>
     <string name="sql">SQL</string>
     <string name="anime_manga">Anime Manga</string>
+    <string name="computers">Computers</string>
+    <string name="general_knowledge">General Knowledge</string>
 </resources>
