Added every category from OpenTDBApi

--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="anime_manga">Anime Manga</string>
     <string name="computers">Computers</string>
     <string name="general_knowledge">General Knowledge</string>
+    <string name="music_and_theater">Music and Theater</string>
 </resources>
