--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
         clean architecture and modern latest libraries and components.
         On the other hand, this App is useful to kill time while learning new things.
         App\'s code is open source and everyone can contribute, add his own category, fix bugs, or add features.
-        \nOur ideology is that all the controls should be as bellow as possible in the thumb reaching range space
-        and all the information should be in upper side of screen, to avoid hand shifting while using App,
+        \nOur ideology is that all the controls should be as below as possible in the thumb-reaching range space
+        and all the information should be on the upper side of the screen, to avoid hand shifting while using the App,
         so this will explain our UI decisions :D and we will try to follow this ideology as much as possible.
     \nEnjoy and for more information see App on Github:</string>
     <string name="app_github_url">https://github.com/Nodrex/Testomania</string>
