--- a/testomania/src/main/res/values/strings.xml
+++ b/testomania/src/main/res/values/strings.xml
@@ -12,7 +12,10 @@
         clean architecture and modern latest libraries and components.
         On the other hand, this App is useful to kill time while learning new things.
         App\'s code is open source and everyone can contribute, add his own category, fix bugs, or add features.
-    Enjoy and for more information see App on Github:</string>
+        \nOur ideology is that all the controls should be as below as possible in the thumb-reaching range space
+        and all the information should be on the upper side of the screen, to avoid hand shifting while using the App,
+        so this will explain our UI decisions :D and we will try to follow this ideology as much as possible.
+    \nEnjoy and for more information see App on Github:</string>
     <string name="app_github_url">https://github.com/Nodrex/Testomania</string>
     <string name="creator_developers">Creator Developers:</string>
     <string name="navigation_finish">Finish</string>
@@ -23,7 +26,7 @@
     <string name="install_browser">Pleas install at least browser to open %1$s</string>
     <string name="linkedin">LinkedIn</string>
     <string name="github">Github</string>
-    <string name="check_your_connection">You\'re offline check your connection</string>
+    <string name="check_your_connection">You\'re offline, please check your connection</string>
     <string name="books">Books</string>
     <string name="music">Music</string>
     <string name="tv">TV</string>
@@ -55,4 +58,7 @@
     <string name="computers">Computers</string>
     <string name="general_knowledge">General Knowledge</string>
     <string name="music_and_theater">Music and Theater</string>
+    <string name="javascript">JavaScript</string>
+    <string name="wordpress">Wordpress</string>
+    <string name="kubernetes">Kubernetes</string>
 </resources>
